[package]
name = "wolke"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
pretty_assertions = "1.3.0"


[dependencies]
nom = "7.1.3"
thiserror = "1.0.38"

[[bench]]
name = "pcd_parsing"
harness = false