[package]
name = "wolke"
version = "0.1.0"
authors = ["Jan Tebernum <jan.tebernum@gmail.com"]
description = "Library for point cloud data"
edition = "2021"
license = "MIT"
repository = "https://github.com/Gosuo/wolke"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
pretty_assertions = "1.3.0"


[dependencies]
byteorder = "1.4.3"
nalgebra = "0.32.1"
nom = "7.1.3"
num-traits = "0.2.15"
smallvec = "1.10.0"
thiserror = "1.0.38"

[[bench]]
name = "pcd_parsing"
harness = false
